# plane-sailing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
infra/: docker-compose.yaml
infra/migrations/: V001__init.sql  V002__indices.sql  V003__pipeline_configs.sql  V004__readings_config_fk.sql
plane-sailing/: __init__.py  plane_sailing.py
planesailing/: __init__.py  adsb_processing.py  config.py  db.py  main.py  util.py
