[project]
name = "planesailing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.2.1",
    "cosmosdr",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg[binary]>=3.2",
    "pyrtlsdr>=0.3.0",
    "rs1090>=0.4.14",
    "scipy>=1.16.2",
    "setuptools>=80.9.0",
    "structlog>=25.4.0",
]
[tool.setuptools]
py-modules = ["planesailing"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
ui = [
    "dash>=3.2.0",
]

[tool.uv.sources]
# TODO publish cosmosdr to pypi
# Relative path assumes cosmosdr is checked out as a sibling of plane-sailing,
# i.e. <root>/repo/cosmosdr and <root>/repo/plane-sailing. Holds on both the
# home server (/home/chris/repo/...) and dev machines (/Users/.../repo/...).
cosmosdr = { path = "../cosmosdr", editable = true }
